# neural_k

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  main_new.cpp
